--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <div class="nav-left"> 
                 <ul>
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="order.html">Order</a></li>
                 </ul>
             </div>
