--- a/order.html
+++ b/order.html
@@ -13,7 +13,7 @@
     <!--Header / Navigation-->
     <header>
         <div>
-            <a href="main.html">
+            <a href="index.html">
                 <img src = "assets/logo.jpg" alt = "Cafe Logo" id = "logo">
             </a>
         </div>
